Replace Localization with Locale