@@ -2,14 +2,13 @@ package org.schabi.newpipe.extractor.downloader;
 
 import org.schabi.newpipe.extractor.NewPipe;
 import org.schabi.newpipe.extractor.exceptions.ReCaptchaException;
-import org.schabi.newpipe.extractor.localization.Localization;
 
 import javax.annotation.Nonnull;
 import javax.annotation.Nullable;
 import java.io.IOException;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
+import java.util.Locale;
 import java.util.Map;
 
 /**
@@ -21,7 +20,7 @@ public abstract class Downloader {
     /**
      * Do a GET request to get the resource that the url is pointing to.<br>
      * <br>
-     * This method calls {@link #get(String, Map, Localization)} with the default preferred
+     * This method calls {@link #get(String, Map, Locale)} with the default preferred
      * localization. It should only be used when the resource that will be fetched won't be affected
      * by the localization.
      *
@@ -29,21 +28,21 @@ public abstract class Downloader {
      * @return the result of the GET request
      */
     public Response get(final String url) throws IOException, ReCaptchaException {
-        return get(url, null, NewPipe.getPreferredLocalization());
+        return get(url, null, NewPipe.getPreferredLocale());
     }
 
     /**
      * Do a GET request to get the resource that the url is pointing to.<br>
      * <br>
-     * It will set the {@code Accept-Language} header to the language of the localization parameter.
+     * It will set the {@code Accept-Language} header to the language of the locale parameter.
      *
      * @param url          the URL that is pointing to the wanted resource
-     * @param localization the source of the value of the {@code Accept-Language} header
+     * @param locale the source of the value of the {@code Accept-Language} header
      * @return the result of the GET request
      */
-    public Response get(final String url, final Localization localization)
+    public Response get(final String url, final Locale locale)
             throws IOException, ReCaptchaException {
-        return get(url, null, localization);
+        return get(url, null, locale);
     }
 
     /**
@@ -56,7 +55,7 @@ public abstract class Downloader {
      */
     public Response get(final String url, @Nullable final Map<String, List<String>> headers)
             throws IOException, ReCaptchaException {
-        return get(url, headers, NewPipe.getPreferredLocalization());
+        return get(url, headers, NewPipe.getPreferredLocale());
     }
 
     /**
@@ -67,17 +66,17 @@ public abstract class Downloader {
      * @param url          the URL that is pointing to the wanted resource
      * @param headers      a list of headers that will be used in the request.
      *                     Any default headers <b>should</b> be overridden by these.
-     * @param localization the source of the value of the {@code Accept-Language} header
+     * @param locale       the source of the value of the {@code Accept-Language} header
      * @return the result of the GET request
      */
     public Response get(final String url,
                         @Nullable final Map<String, List<String>> headers,
-                        final Localization localization)
+                        final Locale locale)
             throws IOException, ReCaptchaException {
         return execute(Request.newBuilder()
                 .get(url)
                 .headers(headers)
-                .localization(localization)
+                .locale(locale)
                 .build());
     }
 
@@ -120,7 +119,7 @@ public abstract class Downloader {
                          @Nullable final Map<String, List<String>> headers,
                          @Nullable final byte[] dataToSend)
             throws IOException, ReCaptchaException {
-        return post(url, headers, dataToSend, NewPipe.getPreferredLocalization());
+        return post(url, headers, dataToSend, NewPipe.getPreferredLocale());
     }
 
     /**
@@ -132,47 +131,47 @@ public abstract class Downloader {
      * @param headers      a list of headers that will be used in the request.
      *                     Any default headers <b>should</b> be overridden by these.
      * @param dataToSend   byte array that will be sent when doing the request.
-     * @param localization the source of the value of the {@code Accept-Language} header
+     * @param locale       the source of the value of the {@code Accept-Language} header
      * @return the result of the POST request
      */
     public Response post(final String url,
                          @Nullable final Map<String, List<String>> headers,
                          @Nullable final byte[] dataToSend,
-                         final Localization localization)
+                         final Locale locale)
             throws IOException, ReCaptchaException {
         return execute(Request.newBuilder()
                 .post(url, dataToSend)
                 .headers(headers)
-                .localization(localization)
+                .locale(locale)
                 .build());
     }
 
     /**
      * Convenient method to send a POST request using the specified value of the
-     * {@code Content-Type} header with a given {@link Localization}.
+     * {@code Content-Type} header with a given {@link Locale}.
      *
      * @param url          the URL that is pointing to the wanted resource
      * @param headers      a list of headers that will be used in the request.
      *                     Any default headers <b>should</b> be overridden by these.
      * @param dataToSend   byte array that will be sent when doing the request.
-     * @param localization the source of the value of the {@code Accept-Language} header
+     * @param locale       the source of the value of the {@code Accept-Language} header
      * @param contentType  the mime type of the body sent, which will be set as the value of the
      *                     {@code Content-Type} header
      * @return the result of the POST request
-     * @see #post(String, Map, byte[], Localization)
+     * @see #post(String, Map, byte[], Locale)
      */
     public Response postWithContentType(final String url,
                                         @Nullable final Map<String, List<String>> headers,
                                         @Nullable final byte[] dataToSend,
-                                        final Localization localization,
+                                        final Locale locale,
                                         final String contentType)
             throws IOException, ReCaptchaException {
         final Map<String, List<String>> actualHeaders = new HashMap<>();
         if (headers != null) {
             actualHeaders.putAll(headers);
         }
-        actualHeaders.put("Content-Type", Collections.singletonList(contentType));
-        return post(url, actualHeaders, dataToSend, localization);
+        actualHeaders.put("Content-Type", List.of(contentType));
+        return post(url, actualHeaders, dataToSend, locale);
     }
 
     /**
@@ -186,35 +185,35 @@ public abstract class Downloader {
      * @param contentType the mime type of the body sent, which will be set as the value of the
      *                    {@code Content-Type} header
      * @return the result of the POST request
-     * @see #post(String, Map, byte[], Localization)
+     * @see #post(String, Map, byte[], Locale)
      */
     public Response postWithContentType(final String url,
                                         @Nullable final Map<String, List<String>> headers,
                                         @Nullable final byte[] dataToSend,
                                         final String contentType)
             throws IOException, ReCaptchaException {
-        return postWithContentType(url, headers, dataToSend, NewPipe.getPreferredLocalization(),
+        return postWithContentType(url, headers, dataToSend, NewPipe.getPreferredLocale(),
                 contentType);
     }
 
     /**
      * Convenient method to send a POST request the JSON mime type as the value of the
-     * {@code Content-Type} header with a given {@link Localization}.
+     * {@code Content-Type} header with a given {@link Locale}.
      *
      * @param url          the URL that is pointing to the wanted resource
      * @param headers      a list of headers that will be used in the request.
      *                     Any default headers <b>should</b> be overridden by these.
      * @param dataToSend   byte array that will be sent when doing the request.
-     * @param localization the source of the value of the {@code Accept-Language} header
+     * @param locale       the source of the value of the {@code Accept-Language} header
      * @return the result of the POST request
-     * @see #post(String, Map, byte[], Localization)
+     * @see #post(String, Map, byte[], Locale)
      */
     public Response postWithContentTypeJson(final String url,
                                             @Nullable final Map<String, List<String>> headers,
                                             @Nullable final byte[] dataToSend,
-                                            final Localization localization)
+                                            final Locale locale)
             throws IOException, ReCaptchaException {
-        return postWithContentType(url, headers, dataToSend, localization, "application/json");
+        return postWithContentType(url, headers, dataToSend, locale, "application/json");
     }
 
     /**
@@ -226,14 +225,13 @@ public abstract class Downloader {
      *                    Any default headers <b>should</b> be overridden by these.
      * @param dataToSend  byte array that will be sent when doing the request.
      * @return the result of the POST request
-     * @see #post(String, Map, byte[], Localization)
+     * @see #post(String, Map, byte[], Locale)
      */
     public Response postWithContentTypeJson(final String url,
                                             @Nullable final Map<String, List<String>> headers,
                                             @Nullable final byte[] dataToSend)
             throws IOException, ReCaptchaException {
-        return postWithContentTypeJson(url, headers, dataToSend,
-                NewPipe.getPreferredLocalization());
+        return postWithContentTypeJson(url, headers, dataToSend, NewPipe.getPreferredLocale());
     }
 
     /**
